--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -2,52 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['lasers', 'v', 'w'], dtype='object')\n",
-      "lasers     object\n",
-      "v         float64\n",
-      "w         float64\n",
-      "dtype: object\n",
-      "lasers     object\n",
-      "v         float64\n",
-      "w         float64\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Read the data/simple_data.csv file and save it to a dataframe. The first row is the name of the columns.\n",
-    "data = pd.read_csv('data/simple_data.tsv', sep='\\t')\n",
-    "print(data.columns)\n",
-    "\n",
-    "print(data.dtypes)\n",
-    "# Remove the ( and ) characters from the 'lasers' column\n",
-    "data['lasers'] = data['lasers'].apply(lambda x: x.replace('(', '').replace(')', ''))\n",
-    "\n",
-    "# Convertir la cadena en una lista utilizando split\n",
-    "data['lasers'] = data['lasers'].apply(lambda x: list(map(float, x.split(','))))\n",
-    "print(data.dtypes)"
+    "# Create an empty dataframe with columns 'lasers', 'v', 'w'\n",
+    "df = pd.DataFrame(columns=['lasers', 'v', 'w'])\n",
+    "num_files = 2\n",
+    "# Read the files dataset/data/i_data.tsv from 0 to range\n",
+    "for i in range(num_files):\n",
+    "    data = pd.read_csv(f'dataset/data/{i}_data.tsv', sep='\\t')\n",
+    "    data['lasers'] = data['lasers'].apply(lambda x: x.replace('(', '').replace(')', ''))\n",
+    "    data['lasers'] = data['lasers'].apply(lambda x: list(map(float, x.split(','))))\n",
+    "    # Append the data to the dataframe\n",
+    "    df = pd.concat([df, data], ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +59,19 @@
       "3   1.562186   1.559538   1.557375   1.555695   1.554498   1.553783   1.553541  \n",
       "4   1.562186   1.559538   1.557375   1.555695   1.554498   1.553783   1.553541  \n",
       "\n",
-      "[5 rows x 180 columns]\n"
+      "[5 rows x 180 columns]\n",
+      "laser_0       987\n",
+      "laser_1       987\n",
+      "laser_2       987\n",
+      "laser_3       987\n",
+      "laser_4      1000\n",
+      "             ... \n",
+      "laser_175     984\n",
+      "laser_176     981\n",
+      "laser_177       0\n",
+      "laser_178       0\n",
+      "laser_179       0\n",
+      "Length: 180, dtype: int64\n"
      ]
     }
    ],
@@ -84,16 +80,19 @@
     "lasers = pd.DataFrame(data['lasers'].values.tolist(), columns=[f'laser_{i}' for i in range(180)])\n",
     "print(lasers.head())\n",
     "\n",
+    "#Check inf values\n",
+    "print(lasers.isin([np.inf, -np.inf]).sum())\n",
+    "\n",
     "# Change the inf values to 20\n",
     "lasers = lasers.replace([np.inf, -np.inf], 20)\n",
     "\n",
     "# Save the new dataframe to a file named 'data/lasers.tsv'\n",
-    "lasers.to_csv('data/lasers.tsv', sep='\\t', index=False)"
+    "lasers.to_csv('dataset/lasers.tsv', sep='\\t', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +100,23 @@
     "w = data['w']\n",
     "\n",
     "# Save the w column to a file named 'data/w.tsv'\n",
-    "w.to_csv('data/w.tsv', sep='\\t', index=False)"
+    "w.to_csv('dataset/w.tsv', sep='\\t', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = lasers\n",
+    "y = w\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=17)\n",
+    "X_train.to_csv('dataset/X_train.tsv', sep='\\t', index=False)\n",
+    "X_test.to_csv('dataset/X_test.tsv', sep='\\t', index=False)\n",
+    "y_train.to_csv('dataset/y_train.tsv', sep='\\t', index=False)\n",
+    "y_test.to_csv('dataset/y_test.tsv', sep='\\t', index=False)"
    ]
   }
  ],
