--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -174,19 +174,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\cgonz\\tfgEnv\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py:425: FitFailedWarning: \n",
+      "160 fits failed out of a total of 480.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "160 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\cgonz\\tfgEnv\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 729, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"c:\\Users\\cgonz\\tfgEnv\\Lib\\site-packages\\sklearn\\base.py\", line 1145, in wrapper\n",
+      "    estimator._validate_params()\n",
+      "  File \"c:\\Users\\cgonz\\tfgEnv\\Lib\\site-packages\\sklearn\\base.py\", line 638, in _validate_params\n",
+      "    validate_parameter_constraints(\n",
+      "  File \"c:\\Users\\cgonz\\tfgEnv\\Lib\\site-packages\\sklearn\\utils\\_param_validation.py\", line 96, in validate_parameter_constraints\n",
+      "    raise InvalidParameterError(\n",
+      "sklearn.utils._param_validation.InvalidParameterError: The 'max_features' parameter of RandomForestRegressor must be an int in the range [1, inf), a float in the range (0.0, 1.0], a str among {'log2', 'sqrt'} or None. Got 'auto' instead.\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "c:\\Users\\cgonz\\tfgEnv\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:979: UserWarning: One or more of the test scores are non-finite: [        nan         nan         nan         nan -0.06012373 -0.05935854\n",
+      " -0.05899071 -0.05857456 -0.06678584 -0.06585225 -0.0656504  -0.06514856\n",
+      "         nan         nan         nan         nan -0.04831637 -0.04687702\n",
+      " -0.04739878 -0.04714133 -0.0525565  -0.05310331 -0.05290518 -0.05234076\n",
+      "         nan         nan         nan         nan -0.04826537 -0.04746025\n",
+      " -0.04715219 -0.04703491 -0.05312226 -0.05241599 -0.05161407 -0.05255003\n",
+      "         nan         nan         nan         nan -0.04804758 -0.0472522\n",
+      " -0.04806283 -0.04712673 -0.0523034  -0.05226949 -0.05219621 -0.05224682\n",
+      "         nan         nan         nan         nan -0.06579044 -0.06599376\n",
+      " -0.06543732 -0.0651098  -0.07069861 -0.07117787 -0.07161856 -0.07121099\n",
+      "         nan         nan         nan         nan -0.05110926 -0.05012601\n",
+      " -0.05065876 -0.05032775 -0.05596312 -0.05485421 -0.05454776 -0.05467053\n",
+      "         nan         nan         nan         nan -0.05177147 -0.05046097\n",
+      " -0.0493639  -0.04976899 -0.05461098 -0.05420534 -0.05420407 -0.05429349\n",
+      "         nan         nan         nan         nan -0.05056582 -0.04949422\n",
+      " -0.04960727 -0.04946477 -0.05605393 -0.05356451 -0.05329214 -0.05468492]\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "END OF THE CELL\n"
+     ]
+    }
+   ],
    "source": [
     "model_name = f'RF{num_data}_GS'\n",
     "\n",
     "param_grid = {\n",
     "    'n_estimators': [100, 200, 300, 500],\n",
     "    'max_depth': [10, 20, 30, 40],\n",
-    "    'min_samples_split': [2, 5, 10],\n",
-    "    'min_samples_leaf': [1, 2, 4, 5, 10],\n",
-    "    'max_features': ['auto', 'sqrt', 'log2', None],\n",
-    "    'bootstrap': [True, False],\n",
+    "    'max_features': ['auto', 'sqrt', 'log2'],\n",
+    "    'criterion': ['squared_error', 'absolute_error']\n",
     "}\n",
     "\n",
     "with open(f'reports/{model_name}.txt', 'w') as f:\n",
