RF models finished

--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -13,15 +13,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading dataset/data/0_data.tsv\n",
+      "Reading dataset/data/1_data.tsv\n",
+      "Reading dataset/data/2_data.tsv\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an empty dataframe with columns 'lasers', 'v', 'w'\n",
     "df = pd.DataFrame(columns=['lasers', 'v', 'w'])\n",
-    "num_files = 2\n",
+    "num_files = 3\n",
     "# Read the files dataset/data/i_data.tsv from 0 to range\n",
     "for i in range(num_files):\n",
+    "    print(f'Reading dataset/data/{i}_data.tsv')\n",
     "    data = pd.read_csv(f'dataset/data/{i}_data.tsv', sep='\\t')\n",
     "    data['lasers'] = data['lasers'].apply(lambda x: x.replace('(', '').replace(')', ''))\n",
     "    data['lasers'] = data['lasers'].apply(lambda x: list(map(float, x.split(','))))\n",
@@ -31,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -72,21 +83,21 @@
       "laser_178     0\n",
       "laser_179     0\n",
       "Length: 180, dtype: int64\n",
-      "         laser_176    laser_177    laser_178    laser_179\n",
-      "count  4020.000000  4020.000000  4020.000000  4020.000000\n",
-      "mean      0.819429     0.821308     0.820969     0.821328\n",
-      "std       0.754329     0.751432     0.751178     0.751427\n",
-      "min       0.081698     0.081862     0.081849     0.081860\n",
-      "25%       0.085411     0.090068     0.090025     0.090010\n",
-      "50%       0.093666     0.093581     0.093524     0.093497\n",
-      "75%       1.586021     1.585266     1.586107     1.585834\n",
-      "max       2.470845     2.464247     2.458435     2.453407\n"
+      "          laser_176     laser_177     laser_178     laser_179\n",
+      "count  12022.000000  12022.000000  12022.000000  12022.000000\n",
+      "mean       0.730483      0.732235      0.732038      0.731836\n",
+      "std        0.746999      0.744087      0.743838      0.743571\n",
+      "min        0.080658      0.080623      0.080612      0.080627\n",
+      "25%        0.086155      0.089456      0.089415      0.089402\n",
+      "50%        0.087087      0.090675      0.090630      0.090612\n",
+      "75%        1.567972      1.566879      1.566414      1.566668\n",
+      "max        2.484068      2.480703      2.478108      2.457208\n"
      ]
     }
    ],
    "source": [
     "# Create a new dataframe with the 'lasers' column as the values of the dataframe, with 180 columns (one for each laser)\n",
-    "lasers = pd.DataFrame(data['lasers'].values.tolist(), columns=[f'laser_{i}' for i in range(180)])\n",
+    "lasers = pd.DataFrame(df['lasers'].values.tolist(), columns=[f'laser_{i}' for i in range(180)])\n",
     "print(lasers.head())\n",
     "\n",
     "#Check inf values\n",
@@ -98,57 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "           laser_0      laser_1      laser_2      laser_3      laser_4  \\\n",
-      "count  4020.000000  4020.000000  4020.000000  4020.000000  4020.000000   \n",
-      "mean      0.840155     0.840561     0.842057     0.840123     1.558181   \n",
-      "std       1.347194     1.347413     1.347926     1.349697     2.011609   \n",
-      "min       0.081962     0.081951     0.081965     0.081591     0.082069   \n",
-      "25%       0.089959     0.089974     0.090017     0.085448     1.394835   \n",
-      "50%       0.093111     0.093137     0.093366     0.093451     1.514161   \n",
-      "75%       1.512292     1.511555     1.513558     1.514673     1.587837   \n",
-      "max      30.000000    30.000000    30.000000    30.000000    30.000000   \n",
-      "\n",
-      "           laser_5      laser_6      laser_7      laser_8      laser_9  ...  \\\n",
-      "count  4020.000000  4020.000000  4020.000000  4020.000000  4020.000000  ...   \n",
-      "mean      1.559908     1.562907     1.619509     1.624911     1.629438  ...   \n",
-      "std       2.011795     2.012223     1.992921     1.992850     1.993041  ...   \n",
-      "min       0.082160     0.082275     0.082417     0.082584     0.082777  ...   \n",
-      "25%       1.395703     1.397675     1.419840     1.423832     1.428524  ...   \n",
-      "50%       1.515485     1.517314     1.526833     1.530388     1.534149  ...   \n",
-      "75%       1.590492     1.593343     1.605210     1.610771     1.615208  ...   \n",
-      "max      30.000000    30.000000    30.000000    30.000000    30.000000  ...   \n",
-      "\n",
-      "         laser_170    laser_171    laser_172    laser_173    laser_174  \\\n",
-      "count  4020.000000  4020.000000  4020.000000  4020.000000  4020.000000   \n",
-      "mean      1.584300     1.573741     1.569688     1.514761     1.493472   \n",
-      "std       1.321049     1.242765     1.242479     1.270490     1.007969   \n",
-      "min       0.082671     0.082478     0.082311     0.082171     0.082055   \n",
-      "25%       1.503372     1.497429     1.493934     1.462809     1.462592   \n",
-      "50%       1.593921     1.589637     1.585836     1.579313     1.576659   \n",
-      "75%       1.692727     1.688260     1.684126     1.676325     1.673816   \n",
-      "max      30.000000    30.000000    30.000000    30.000000    30.000000   \n",
-      "\n",
-      "         laser_175    laser_176    laser_177    laser_178    laser_179  \n",
-      "count  4020.000000  4020.000000  4020.000000  4020.000000  4020.000000  \n",
-      "mean      1.484815     0.819429     0.821308     0.820969     0.821328  \n",
-      "std       0.901898     0.754329     0.751432     0.751178     0.751427  \n",
-      "min       0.081966     0.081698     0.081862     0.081849     0.081860  \n",
-      "25%       1.460296     0.085411     0.090068     0.090025     0.090010  \n",
-      "50%       1.574868     0.093666     0.093581     0.093524     0.093497  \n",
-      "75%       1.670697     1.586021     1.585266     1.586107     1.585834  \n",
-      "max      30.000000     2.470845     2.464247     2.458435     2.453407  \n",
-      "\n",
-      "[8 rows x 180 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Change the inf values to 20\n",
     "lasers = lasers.replace([np.inf, -np.inf], 20)\n",
@@ -159,12 +122,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    12022.000000\n",
+      "mean         0.074695\n",
+      "std          1.122612\n",
+      "min         -1.869818\n",
+      "25%         -1.207970\n",
+      "50%          0.587583\n",
+      "75%          1.138162\n",
+      "max          1.696602\n",
+      "Name: w, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Read the w column from the original dataset\n",
-    "w = data['w']\n",
+    "w = df['w']\n",
     "\n",
     "print(w.describe())\n",
     "\n",
@@ -174,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
