--- a/train.ipynb
+++ b/train.ipynb
@@ -29,20 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_samples = 4000"
+    "num_samples = 15000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if num_samples > 0:\n",
+    "if num_samples == 4000:\n",
     "    num_data = str(num_samples)\n",
     "else:\n",
     "    num_data = ''"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,12 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input size: 180\n"
+     ]
+    }
+   ],
    "source": [
     "# Input size\n",
-    "input_size = X_train_raw.shape[1]"
+    "input_size = X_train_raw.shape[1]\n",
+    "print(f'Input size: {input_size}')"
    ]
   },
   {
@@ -89,15 +98,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4000, 1)\n",
-      "(4000,)\n"
+      "(9617, 1)\n",
+      "(9617,)\n"
      ]
     }
    ],
@@ -111,15 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4000, 180)\n",
-      "(1001, 180)\n"
+      "(9617, 180)\n",
+      "(2405, 180)\n"
      ]
     }
    ],
@@ -132,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -265,6 +274,49 @@
     "        print(f'R2 = {r2:.4f}')\n",
     "        print('================================================')\n",
     "        print('================================================')\n",
+    "\n",
+    "# Restore the original standard output\n",
+    "sys.stdout = original_stdout\n",
+    "\n",
+    "print(\"END OF THE CELL\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "END OF THE CELL\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_name = f'RF{num_data}_opt'\n",
+    "\n",
+    "with open(f'reports/{model_name}.txt', 'w') as f:\n",
+    "    with redirect_stdout(f):\n",
+    "\n",
+    "        model = RandomForestRegressor(criterion='squared_error', max_depth=20, max_features='sqrt', n_estimators=200)\n",
+    "\n",
+    "        model.fit(X_train,y_train)\n",
+    "\n",
+    "        # Guarda el modelo\n",
+    "        joblib.dump(model, f'models/{model_name}.pkl')\n",
+    "\n",
+    "        # Get the mean absolute error on the validation data\n",
+    "        y_pred = model.predict(X_test)\n",
+    "        MAE = metrics.mean_absolute_error(y_test , y_pred)\n",
+    "        MSE = metrics.mean_squared_error(y_test , y_pred)\n",
+    "        r2 = metrics.r2_score(y_test, y_pred)\n",
+    "        # Print the metrics with 4 decimal digits\n",
+    "        print('Model: ', model_name)\n",
+    "        print(f'MAE = {MAE:.4f}')\n",
+    "        print(f'MSE = {MSE:.4f}')\n",
+    "        print(f'R2 = {r2:.4f}')\n",
     "\n",
     "# Restore the original standard output\n",
     "sys.stdout = original_stdout\n",
