--- a/train.ipynb
+++ b/train.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from keras import layers\n",
     "from keras.optimizers import Adam\n",
+    "#from scikeras.wrappers import KerasRegressor\n",
     "\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn import metrics\n",
@@ -30,16 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_samples = 15000"
+    "num_samples = 4000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,12 +94,27 @@
     "scaler = StandardScaler()\n",
     "scaler.fit(X_train_raw)\n",
     "X_train = scaler.transform(X_train_raw)\n",
-    "X_test = scaler.transform(X_test_raw)"
+    "X_test = scaler.transform(X_test_raw)\n",
+    "standarization = 'StandardScaler'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply min-max scaling\n",
+    "scaler = MinMaxScaler()\n",
+    "scaler.fit(X_train_raw)\n",
+    "X_train = scaler.transform(X_train_raw)\n",
+    "X_test = scaler.transform(X_test_raw)\n",
+    "standarization = 'MinMaxScaler'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -137,12 +152,13 @@
     "X_train = X_train_raw\n",
     "X_test = X_test_raw\n",
     "print(X_train.shape)\n",
-    "print(X_test.shape)"
+    "print(X_test.shape)\n",
+    "standarization = ''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +170,7 @@
     }
    ],
    "source": [
-    "model_name = f'RF{num_data}'\n",
+    "model_name = f'RF{num_data}_{standarization}'\n",
     "\n",
     "with open(f'reports/{model_name}.txt', 'w') as f:\n",
     "    with redirect_stdout(f):\n",
@@ -239,7 +255,7 @@
     }
    ],
    "source": [
-    "model_name = f'RF{num_data}_GS'\n",
+    "model_name = f'RF{num_data}_{standarization}_GS'\n",
     "\n",
     "param_grid = {\n",
     "    'n_estimators': [100, 200, 300, 500],\n",
@@ -296,7 +312,7 @@
     }
    ],
    "source": [
-    "model_name = f'RF{num_data}_opt'\n",
+    "model_name = f'RF{num_data}_{standarization}_opt'\n",
     "\n",
     "with open(f'reports/{model_name}.txt', 'w') as f:\n",
     "    with redirect_stdout(f):\n",
@@ -331,7 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = f'NN{num_data}'\n",
+    "model_name = f'NN{num_data}_{standarization}'\n",
     "\n",
     "with open(f'reports/{model_name}.txt', 'w') as f:\n",
     "    with redirect_stdout(f):\n",
@@ -365,6 +381,64 @@
     "\n",
     "        # Test the model\n",
     "        y_pred = model.predict(X_test)\n",
+    "        mse = metrics.mean_squared_error(y_test, y_pred)\n",
+    "        mae = metrics.mean_absolute_error(y_test, y_pred)\n",
+    "        r2 = metrics.r2_score(y_test, y_pred)\n",
+    "\n",
+    "        print(f'MSE: {mse}')\n",
+    "        print(f'MAE: {mae}')\n",
+    "        print(f'R2: {r2}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_model(optimizer='adam'):\n",
+    "    model = keras.Sequential([\n",
+    "        layers.Dense(128, input_dim=input_size, activation='relu'),\n",
+    "        layers.Dense(64, activation='relu'),\n",
+    "        layers.Dense(32, activation='relu'),\n",
+    "        layers.Dense(1, activation='linear'),\n",
+    "    ])\n",
+    "    \n",
+    "    model.compile(loss='mse', optimizer=optimizer, metrics=['mae', 'mse'])\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = f'NN{num_data}_{standarization}_GS'\n",
+    "\n",
+    "with open(f'reports/{model_name}.txt', 'w') as f:\n",
+    "    with redirect_stdout(f):\n",
+    "\n",
+    "        model = keras.wrappers.scikit_learn.KerasRegressor(build_fn=create_model, verbose=0)\n",
+    "\n",
+    "        param_grid = {\n",
+    "            'batch_size': [32, 64],\n",
+    "            'epochs': [50, 100],\n",
+    "            'optimizer': ['adam', 'rmsprop']\n",
+    "        }\n",
+    "\n",
+    "        grid = GridSearchCV(estimator=model, param_grid=param_grid, cv=5, scoring='neg_mean_squared_error', verbose=7)\n",
+    "        grid_result = grid.fit(X_train, y_train)\n",
+    "\n",
+    "\n",
+    "        print(f'Best parameters: {grid_result.best_params_}')\n",
+    "        print(f'Best estimator: {grid_result.best_estimator_}')\n",
+    "\n",
+    "        # Save the model\n",
+    "        model.save(f'models/{model_name}.keras')\n",
+    "\n",
+    "        # Test the model\n",
+    "        y_pred = grid_result.predict(X_test)\n",
     "        mse = metrics.mean_squared_error(y_test, y_pred)\n",
     "        mae = metrics.mean_absolute_error(y_test, y_pred)\n",
     "        r2 = metrics.r2_score(y_test, y_pred)\n",
