--- a/train.ipynb
+++ b/train.ipynb
@@ -86,30 +86,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['scalers/StandardScaler.joblib']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Standardizing data\n",
     "scaler = StandardScaler()\n",
     "scaler.fit(X_train_raw)\n",
     "X_train = scaler.transform(X_train_raw)\n",
     "X_test = scaler.transform(X_test_raw)\n",
-    "standarization = 'StandardScaler'"
+    "standarization = 'StandardScaler'\n",
+    "\n",
+    "# Save the scaler\n",
+    "joblib.dump(scaler, f'scalers/{standarization}.joblib')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['scalers/MinMaxScaler.joblib']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Apply min-max scaling\n",
     "scaler = MinMaxScaler()\n",
     "scaler.fit(X_train_raw)\n",
     "X_train = scaler.transform(X_train_raw)\n",
     "X_test = scaler.transform(X_test_raw)\n",
-    "standarization = 'MinMaxScaler'"
+    "standarization = 'MinMaxScaler'\n",
+    "\n",
+    "# Save the scaler\n",
+    "joblib.dump(scaler, f'scalers/{standarization}.pkl')"
    ]
   },
   {
