Experiments with shuffled data

--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Shuffle the dataframe\n",
+    "df = df.sample(frac=1).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -50,25 +60,25 @@
      "output_type": "stream",
      "text": [
       "    laser_0   laser_1   laser_2   laser_3   laser_4   laser_5   laser_6  \\\n",
-      "0  1.547417  1.547695  1.548456  1.549689  1.551408  1.553604  1.556287   \n",
-      "1  1.547417  1.547695  1.548456  1.549689  1.551408  1.553604  1.556287   \n",
-      "2  1.547417  1.547695  1.548456  1.549689  1.551408  1.553604  1.556287   \n",
-      "3  1.547417  1.547695  1.548456  1.549689  1.551408  1.553604  1.556287   \n",
-      "4  1.547417  1.547695  1.548456  1.549689  1.551408  1.553604  1.556287   \n",
+      "0  1.445742  1.447176  1.449060  1.451396  1.454188  1.457442  1.461160   \n",
+      "1  0.090631  0.090649  0.090694  0.082322  1.526117  1.530020  1.534413   \n",
+      "2  0.090631  0.090648  0.090693  0.082325  1.512301  1.513481  1.515123   \n",
+      "3  0.090747  0.090765  0.090811  0.081970  1.854123  1.855409  1.857268   \n",
+      "4  0.088716  0.088727  0.088765  0.088830  0.088923  0.089044  0.089192   \n",
       "\n",
       "    laser_7   laser_8   laser_9  ...  laser_170  laser_171  laser_172  \\\n",
-      "0  1.559463  1.563129  1.567301  ...   1.573106   1.568969   1.565328   \n",
-      "1  1.559463  1.563129  1.567301  ...   1.573106   1.568969   1.565328   \n",
-      "2  1.559463  1.563129  1.567301  ...   1.573106   1.568969   1.565328   \n",
-      "3  1.559463  1.563129  1.567301  ...   1.573106   1.568969   1.565328   \n",
-      "4  1.559463  1.563129  1.567301  ...   1.573106   1.568969   1.565328   \n",
+      "0  1.465352  1.470016  1.475166  ...   1.667622   1.664600   1.662099   \n",
+      "1  1.539303  1.544705  1.550620  ...   1.596252   1.593861   1.591969   \n",
+      "2  1.517243  1.519831  1.522900  ...   1.620029   1.614709   1.609917   \n",
+      "3  1.859704  1.862720  1.866454  ...   1.273189   1.268899   1.265020   \n",
+      "4  0.089369  0.089573  0.089807  ...   0.092485   0.092236   0.092016   \n",
       "\n",
       "   laser_173  laser_174  laser_175  laser_176  laser_177  laser_178  laser_179  \n",
-      "0   1.562186   1.559538   1.557375   1.555695   1.554498   1.553783   1.553541  \n",
-      "1   1.562186   1.559538   1.557375   1.555695   1.554498   1.553783   1.553541  \n",
-      "2   1.562186   1.559538   1.557375   1.555695   1.554498   1.553783   1.553541  \n",
-      "3   1.562186   1.559538   1.557375   1.555695   1.554498   1.553783   1.553541  \n",
-      "4   1.562186   1.559538   1.557375   1.555695   1.554498   1.553783   1.553541  \n",
+      "0   1.660122   1.658658   1.657699   1.657257   1.657325   1.657902   1.658992  \n",
+      "1   1.590569   1.589658   1.589240   0.086340   0.089423   0.089382   0.089369  \n",
+      "2   1.605647   1.601894   1.598645   0.086338   0.089423   0.089383   0.089370  \n",
+      "3   1.261555   1.258496   1.255839   0.086725   0.089306   0.089266   0.089253  \n",
+      "4   0.091826   0.091665   0.091532   0.091428   0.091352   0.091304   0.091285  \n",
       "\n",
       "[5 rows x 180 columns]\n",
       "laser_0       6\n",
@@ -109,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,12 +127,12 @@
     "lasers = lasers.replace([np.inf, -np.inf], 20)\n",
     "\n",
     "# Save the new dataframe to a file named 'data/lasers.tsv'\n",
-    "lasers.to_csv('dataset/lasers.tsv', sep='\\t', index=False)"
+    "lasers.to_csv('dataset/shuffle_lasers.tsv', sep='\\t', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -148,12 +158,12 @@
     "print(w.describe())\n",
     "\n",
     "# Save the w column to a file named 'data/w.tsv'\n",
-    "w.to_csv('dataset/w.tsv', sep='\\t', index=False)"
+    "w.to_csv('dataset/shuffle_w.tsv', sep='\\t', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,10 +171,10 @@
     "y = w\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=17)\n",
-    "X_train.to_csv('dataset/X_train.tsv', sep='\\t', index=False)\n",
-    "X_test.to_csv('dataset/X_test.tsv', sep='\\t', index=False)\n",
-    "y_train.to_csv('dataset/y_train.tsv', sep='\\t', index=False)\n",
-    "y_test.to_csv('dataset/y_test.tsv', sep='\\t', index=False)"
+    "X_train.to_csv('dataset/X_train_shuffled.tsv', sep='\\t', index=False)\n",
+    "X_test.to_csv('dataset/X_test_shuffled.tsv', sep='\\t', index=False)\n",
+    "y_train.to_csv('dataset/y_train_shuffled.tsv', sep='\\t', index=False)\n",
+    "y_test.to_csv('dataset/y_test_shuffled.tsv', sep='\\t', index=False)"
    ]
   }
  ],
